<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/button_left_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@color/white"
            android:contentDescription="@string/previous_month"
            android:onClick="navPrevWeekClick"
            android:src="@drawable/img_arrow_left" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp">

            <TextView
                android:id="@+id/header_month_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/month"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/header_year"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/year"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>


        <ImageButton
            android:id="@+id/button_right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/next_month_arrow"
            android:onClick="navNextWeekClick"
            android:src="@drawable/img_arrow_right" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/sunday"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/monday"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/tuesday"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/wednesday"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/thursday"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/friday"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/saturday"
            android:textColor="@color/pink"
            android:textStyle="bold" />

    </LinearLayout>

    <GridLayout
        android:id="@+id/event_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="7"
        android:orientation="horizontal"
        android:rowCount="5" />

</LinearLayout>