<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/peer_interv_more"
    android:visibility="gone">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bright_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="25dp"
        android:paddingStart="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/current_event_title"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intervention_effectiveness_txt"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/intervention_effectiveness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:max="4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/poor"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fair"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/average"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/good"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/excellent"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expected_stress_level"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/expected_stresslvl_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:max="4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/not_at_all"
                    android:textAlignment="viewStart"
                    android:textColor="@color/slvl0_color"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/low"
                    android:textAlignment="center"
                    android:textColor="@color/slvl1_color"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/normal"
                    android:textAlignment="center"
                    android:textColor="@color/slvl2_color"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/high"
                    android:textAlignment="center"
                    android:textColor="@color/slvl3_color"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/extreme"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/slvl4_color"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/expected_strs_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/expected_strs_reason_text"
                android:text="@string/stress_incr_title1"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@id/expected_strs_reason_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_solid_wrap"
                android:gravity="top"
                android:maxLength="128"
                android:maxLines="3"
                android:padding="5dp"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bright_grey" />
</LinearLayout>