<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_survey_element"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dummy"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <SeekBar
        android:id="@+id/scale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:max="10"
        android:theme="@style/Widget.AppCompat.SeekBar.Discrete" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/survey4_scale0"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/survey4_scale1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/survey4_scale2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>